--- a/html/index.html
+++ b/html/index.html
@@ -1858,7 +1858,7 @@
                             <span class="block text-indigo-600 xl:inline" data-primary="indigo-600">Tell Your
                                 Story!</span>
                         </h1>
-                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been
+                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It is never been
                             easier to build beautiful websites that convey your message and tell your story.</p>
                         <div class="relative flex flex-col sm:flex-row sm:space-x-4">
                             <a href="#_"
