--- a/html/index.html
+++ b/html/index.html
@@ -1831,7 +1831,7 @@
                     <span class="inline md:block">Start Crafting Your</span> <span
                         class="relative mt-2 text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 to-indigo-500 md:inline-block">Next
                         Great Idea</span></h1>
-                <div class="mx-auto mt-5 text-gray-500 md:mt-12 md:max-w-lg md:text-center lg:text-lg">Teaching how to huild, deploy & monetize, scalable and secure 
+                <div class="mx-auto mt-5 text-gray-500 md:mt-12 md:max-w-lg md:text-center lg:text-lg">Teaching how to build, deploy & monetize, scalable and secure 
                     SaaS apllications with Laravel & AWS!</div>
                 <div class="flex flex-col items-center mt-12 text-center">
                     <span class="relative inline-flex w-full md:w-auto">
@@ -1858,7 +1858,7 @@
                             <span class="block text-indigo-600 xl:inline" data-primary="indigo-600">Tell Your
                                 Story!</span>
                         </h1>
-                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It is never been
+                        <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been
                             easier to build beautiful websites that convey your message and tell your story.</p>
                         <div class="relative flex flex-col sm:flex-row sm:space-x-4">
                             <a href="#_"
