using prometheus to monitor my app

--- a/html/index.html
+++ b/html/index.html
@@ -1894,7 +1894,7 @@
             <p class="text-blue-500 font-medium uppercase">Our Application Integrations</p>
             <h2 class="font-bold text-3xl sm:text-4xl lg:text-5xl mt-3">Connect with Your Favorite Apps.</h2>
             <p class="mt-4 text-gray-500 text-base sm:text-xl lg:text-2xl">We've built integrations with some of your
-                favorite services.<br class="lg:hidden hidden sm:block"> Check'em out below 👇</p>
+                favorite services.<br class="lg:hidden hidden sm:block"> Check them out below 👇</p>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10 my-12 sm:my-16">
                 <div
                     class="rounded-lg py-10 flex flex-col items-center justify-center shadow-lg border border-gray-100">
